<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:backgroundTint="#000000"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/boton_estrella"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_margin="15dp"
            android:background="@color/colorPrimaryDark"
            android:src="@drawable/ic_star_border_black_24dp"
            android:layout_gravity="end"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_nombre_Peluqueria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_nombre_pelu"
                android:textColor="@color/colorRojo"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_distancia"
                    android:textColor="@color/colorAccent"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="15sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/textView_distancia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_dist"
                    android:textColor="@color/colorAccent"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="15sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>



            <TextView
                android:id="@+id/textView_direccion_peluqueria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_direccion_pelu"
                android:textColor="@color/colorAccent"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

    </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>