<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="10dp"
    tools:context=".perfiles.PerfilPeluActivity">


    <ImageView
        android:id="@+id/image_peluqueria"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[15]" />

    <TextView
        android:id="@+id/perfil_nombre_barberia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bowlby_one_sc"
        android:gravity="center"
        android:text="@string/title_nombre_pelu"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_peluqueria" />

    <TextView
        android:id="@+id/tv_distancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="dsffg"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toEndOf="@+id/info_distancia"
        app:layout_constraintTop_toBottomOf="@+id/perfil_nombre_barberia" />

    <TextView
        android:id="@+id/info_distancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/label_se_encuentra_a_"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/perfil_nombre_barberia" />

    <TextView
        android:id="@+id/info_personas_que_prefieren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_personas_la_prefieren"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_personas_que_la_prefieren"
        app:layout_constraintTop_toBottomOf="@+id/tv_distancia" />

    <TextView
        android:id="@+id/tv_personas_que_la_prefieren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="0"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_distancia" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_promociones"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_personas_que_prefieren">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bowlby_one_sc"
            android:gravity="center"
            android:text="@string/label_promo"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_promo_disponible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bowlby_one_sc"
            android:gravity="center"
            android:text="@string/label_promo"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/imageMapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/menuitem_background"
        app:layout_constraintBottom_toBottomOf="@+id/image_peluqueria"
        app:layout_constraintEnd_toEndOf="@+id/image_peluqueria"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925"
        app:srcCompat="@drawable/ic_mapa" />





    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_promociones">

        <LinearLayout
            android:id="@+id/linear_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_en_este_momento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/cantata_one"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/label_en_este_momento"
                android:textColor="@color/colorAccent"
                android:textSize="10sp" />


            <TextView
                android:id="@+id/textView_open_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/holtwood_one_sc"
                android:gravity="center"
                android:text="@string/label_abierto_cerrado"
                android:textColor="@color/colorRojo"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/label_horarios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/cantata_one"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/label_horarios"
                android:textColor="@color/colorAccent"
                android:textSize="10sp"
                tools:layout_editor_absoluteX="97dp"
                tools:layout_editor_absoluteY="596dp" />

            <TextView
                android:id="@+id/textView_horarios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/cantata_one"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/label_horarios"
                android:textColor="@color/colorAccent"
                android:textSize="10sp"
                tools:layout_editor_absoluteX="97dp"
                tools:layout_editor_absoluteY="596dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_instagram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_iconfinder_instagram_1298747" />

                <ImageView
                    android:id="@+id/image_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_facebook" />

                <ImageView
                    android:id="@+id/image_whatsapp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_iconfinder_whatsapp_2553052" />
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>